Fixed IE and Edge banner switch jumping

--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,7 @@ a:focus .underscore_text {
 
     margin: 0 auto 31px;
 
-    width: 670px;
+    width: 671px;
 }
 
 .main-banner-item .button {
